--- a/C03/w05/C03w05_nb_pa1.ipynb
+++ b/C03/w05/C03w05_nb_pa1.ipynb
@@ -438,7 +438,7 @@
       "--------\n",
       "Number of trees                : 5\n",
       "Max tree depth                 : 6\n",
-      "Training time (sec)            : 0.1496\n",
+      "Training time (sec)            : 0.1263\n",
       "Training accuracy              : 0.6733\n",
       "Training log_loss              : 0.6062\n",
       "Training auc                   : 0.7426\n",
@@ -452,7 +452,7 @@
     "                                                     target=target, \n",
     "                                                     features=features, \n",
     "                                                     max_iterations=5,\n",
-    "                                                    verbose=False)\n",
+    "                                                     verbose=False)\n",
     "model_5.summary()"
    ]
   },
@@ -764,7 +764,7 @@
     "    perc_correct_preds = (preds == data[target]).sum() / len(data)\n",
     "    return (preds, perc_correct_preds)\n",
     "  elif output_type == 'probability':\n",
-    "    # retun predictions as probabiliies + argmin, argmax\n",
+    "    # predictions as probabiliies + argmin, argmax\n",
     "    return (preds, preds.argmin(), preds.argmax())\n",
     "  #\n",
     "  raise(NotImplementedError(\"output type is either  'prediction' or 'probability'\"))"
@@ -841,12 +841,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(list(filter(lambda t: t[1] >= 0.5, \n",
-    "                       filter(lambda t: t[0] == 1, zip(preds_sv, proba_preds_sv))))) == len(list(filter(lambda p: p == 1, preds_sv)))"
+    "assert_all(lambda p: p >= 0.5, proba_preds_sv[preds_sv == 1])"
    ]
   },
   {
@@ -874,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +882,7 @@
        "0.6681"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +910,7 @@
        "1618"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +951,7 @@
        "1463"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1007,7 @@
        "46990000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1151,7 @@
        "[5 rows x 4 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1240,7 @@
        "[5 rows x 4 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,14 +1267,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this assignment, we will train 5 different ensemble classifiers in the form of gradient boosted trees. We will train models with 10, 50, 100, 200, and 500 trees.  We use the **max_iterations** parameter in the boosted tree module. \n",
-    "\n",
-    "Let's get sarted with a model with **max_iterations = 10**:"
+    "In this assignment, we will train 5 different ensemble classifiers in the form of gradient boosted trees. We will train models with 10, 50, 100, 200, and 500 trees.  We use the **max_iterations** parameter in the boosted tree module. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1295,43 +1292,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model_10 = turicreate.boosted_trees_classifier.create(train_data, validation_set=None, \n",
-    "#                                                       target=target,\n",
-    "#                                                       features=features,\n",
-    "#                                                       max_iterations=10,\n",
-    "#                                                       verbose=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, train 4 models with **max_iterations** to be:\n",
-    "* `max_iterations = 50`, \n",
-    "* `max_iterations = 100`\n",
-    "* `max_iterations = 200`\n",
-    "* `max_iterations = 500`. \n",
+    "Now, train 5 models with **max_iterations** to be:\n",
+    "  * `max_iterations = 10`, \n",
+    "  * `max_iterations = 50`, \n",
+    "  * `max_iterations = 100`\n",
+    "  * `max_iterations = 200`\n",
+    "  * `max_iterations = 500`. \n",
     "\n",
-    "Let us call these models **model_50**, **model_100**, **model_200**, and **model_500**. You can pass in `verbose=False` in order to suppress the printed output.\n",
+    "Let us call these models **model_10**, **model_50**, **model_100**, **model_200**, and **model_500**. \n",
     "\n",
     "**Warning:** This could take a couple of minutes to run."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model_50 = \n",
-    "# model_100 = \n",
-    "# model_200 = \n",
-    "# model_500 = \n",
     "hsh = try_models(train_data, target=target, feature=features)"
    ]
   },
@@ -1351,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,54 +1465,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let us run **Step 2**. Save the training errors into a list called **training_errors**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# training_errors = [train_err_10, train_err_50, train_err_100, \n",
-    "#                    train_err_200, train_err_500]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, onto **Step 3**. Write code to compute the classification error on the **validation_data** for models **model_10**, **model_50**, **model_100**, **model_200**, and **model_500**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, let us run **Step 4**. Save the training errors into a list called **validation_errors**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# validation_errors = [validation_err_10, validation_err_50, validation_err_100, \n",
-    "#                      validation_err_200, validation_err_500]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Now, we will plot the **training_errors** and **validation_errors** versus the number of trees. We will compare the 10, 50, 100, 200, and 500 tree models. We provide some plotting code to visualize the plots within this notebook. \n",
     "\n",
     "Run the following code to visualize the plots."
@@ -1539,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
