--- a/C03/w01/C03w01_nb_pa.ipynb
+++ b/C03/w01/C03w01_nb_pa.ipynb
@@ -466,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "took: 5528.400ms\n"
+      "took: 5612.368ms\n"
      ]
     }
    ],
@@ -490,58 +490,56 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Class                          : LogisticClassifier\n",
-       "\n",
-       "Schema\n",
-       "------\n",
-       "Number of coefficients         : 121713\n",
-       "Number of examples             : 133416\n",
-       "Number of classes              : 2\n",
-       "Number of feature columns      : 1\n",
-       "Number of unpacked features    : 121712\n",
-       "\n",
-       "Hyperparameters\n",
-       "---------------\n",
-       "L1 penalty                     : 0.0\n",
-       "L2 penalty                     : 0.01\n",
-       "\n",
-       "Training Summary\n",
-       "----------------\n",
-       "Solver                         : lbfgs\n",
-       "Solver iterations              : 5\n",
-       "Solver status                  : TERMINATED: Terminated due to numerical difficulties.\n",
-       "Training time (sec)            : 1.2076\n",
-       "\n",
-       "Settings\n",
-       "--------\n",
-       "Log-likelihood                 : inf\n",
-       "\n",
-       "Highest Positive Coefficients\n",
-       "-----------------------------\n",
-       "word_count[offsi]              : 21.7657\n",
-       "word_count[conclusions]        : 21.6818\n",
-       "word_count[torsional]          : 21.6818\n",
-       "word_count[geeeezzz]           : 21.6818\n",
-       "word_count[articletest]        : 21.6818\n",
-       "\n",
-       "Lowest Negative Coefficients\n",
-       "----------------------------\n",
-       "word_count[wahwah]             : -21.8302\n",
-       "word_count[timesopros]         : -21.8302\n",
-       "word_count[pumpabout]          : -21.8302\n",
-       "word_count[lactinai]           : -21.8302\n",
-       "word_count[nonclogged]         : -21.8302"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class                          : LogisticClassifier\n",
+      "\n",
+      "Schema\n",
+      "------\n",
+      "Number of coefficients         : 121713\n",
+      "Number of examples             : 133416\n",
+      "Number of classes              : 2\n",
+      "Number of feature columns      : 1\n",
+      "Number of unpacked features    : 121712\n",
+      "\n",
+      "Hyperparameters\n",
+      "---------------\n",
+      "L1 penalty                     : 0.0\n",
+      "L2 penalty                     : 0.01\n",
+      "\n",
+      "Training Summary\n",
+      "----------------\n",
+      "Solver                         : lbfgs\n",
+      "Solver iterations              : 5\n",
+      "Solver status                  : TERMINATED: Terminated due to numerical difficulties.\n",
+      "Training time (sec)            : 1.2251\n",
+      "\n",
+      "Settings\n",
+      "--------\n",
+      "Log-likelihood                 : inf\n",
+      "\n",
+      "Highest Positive Coefficients\n",
+      "-----------------------------\n",
+      "word_count[offsi]              : 21.7657\n",
+      "word_count[conclusions]        : 21.6818\n",
+      "word_count[torsional]          : 21.6818\n",
+      "word_count[geeeezzz]           : 21.6818\n",
+      "word_count[articletest]        : 21.6818\n",
+      "\n",
+      "Lowest Negative Coefficients\n",
+      "----------------------------\n",
+      "word_count[pumpconsit]         : -21.8302\n",
+      "word_count[timesopros]         : -21.8302\n",
+      "word_count[pumpabout]          : -21.8302\n",
+      "word_count[lactinai]           : -21.8302\n",
+      "word_count[nonclogged]         : -21.8302\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "sentiment_model"
+    "sentiment_model.summary()"
    ]
   },
   {
@@ -828,7 +826,7 @@
       "text/plain": [
        "dtype: float\n",
        "Rows: 3\n",
-       "[4.788907309213859, -3.000782222461771, -8.188501360762801]"
+       "[4.788907309213858, -3.000782222461783, -8.1885013607628]"
       ]
      },
      "execution_count": 20,
@@ -961,7 +959,7 @@
       "text/plain": [
        "dtype: float\n",
        "Rows: 3\n",
-       "[0.9917471313286872, 0.04739054748715523, 0.00027775277121725193]"
+       "[0.9917471313286872, 0.047390547487154704, 0.0002777527712172524]"
       ]
      },
      "execution_count": 24,
@@ -1235,33 +1233,33 @@
       "+-------------------------------+------------------------+\n",
       "|              name             |         proba          |\n",
       "+-------------------------------+------------------------+\n",
-      "| Luna Lullaby Bosom Baby Nu... | 3.229790842321183e-63  |\n",
-      "| The First Years True Choic... | 1.6322823186471684e-24 |\n",
-      "| Jolly Jumper Arctic Sneak ... |  8.11031138203306e-20  |\n",
-      "| Motorola MBP36 Remote Wire... | 7.797281605611318e-16  |\n",
-      "| VTech Communications Safe ... | 1.841161479839492e-14  |\n",
-      "| Fisher-Price Ocean Wonders... | 6.345094941890142e-14  |\n",
-      "| Levana Safe N'See Digital ... | 6.578528513061246e-14  |\n",
-      "| Safety 1st High-Def Digita... | 1.5408410011837334e-13 |\n",
-      "| Snuza Portable Baby Moveme... |  6.30183528909609e-13  |\n",
-      "| Adiri BPA Free Natural Nur... | 9.314560905886958e-13  |\n",
-      "| Samsung SEW-3037W Wireless... | 5.920602970082254e-12  |\n",
-      "| Motorola Digital Video Bab... | 5.986200849941288e-12  |\n",
-      "| Cloth Diaper Sprayer--styl... | 1.0091402072277123e-11 |\n",
-      "| Munchkin Nursery Projector... | 3.4551832745591023e-11 |\n",
-      "| VTech Communications Safe ... | 4.432801716964067e-11  |\n",
-      "| Carter's Monkey Bars Music... | 4.669455335857381e-11  |\n",
-      "| Safety 1st Lift Lock and S... | 1.0383337454040435e-10 |\n",
-      "| MyLine Eco baby play mat-A... | 2.0250237927021383e-10 |\n",
-      "|    Fisher-Price Royal Potty   | 3.9352573041105814e-10 |\n",
+      "| Luna Lullaby Bosom Baby Nu... | 3.229790842324396e-63  |\n",
+      "| The First Years True Choic... | 1.6322823186474584e-24 |\n",
+      "| Jolly Jumper Arctic Sneak ... | 8.110311382034674e-20  |\n",
+      "| Motorola MBP36 Remote Wire... | 7.797281605613701e-16  |\n",
+      "| VTech Communications Safe ... | 1.841161479839989e-14  |\n",
+      "| Fisher-Price Ocean Wonders... | 6.345094941890232e-14  |\n",
+      "| Levana Safe N'See Digital ... | 6.578528513061713e-14  |\n",
+      "| Safety 1st High-Def Digita... | 1.5408410011838922e-13 |\n",
+      "| Snuza Portable Baby Moveme... | 6.301835289097591e-13  |\n",
+      "| Adiri BPA Free Natural Nur... |  9.3145609058859e-13   |\n",
+      "| Samsung SEW-3037W Wireless... | 5.920602970083579e-12  |\n",
+      "| Motorola Digital Video Bab... | 5.9862008499426064e-12 |\n",
+      "| Cloth Diaper Sprayer--styl... | 1.0091402072276871e-11 |\n",
+      "| Munchkin Nursery Projector... | 3.455183274559274e-11  |\n",
+      "| VTech Communications Safe ... | 4.432801716964949e-11  |\n",
+      "| Carter's Monkey Bars Music... | 4.669455335857928e-11  |\n",
+      "| Safety 1st Lift Lock and S... | 1.0383337454040251e-10 |\n",
+      "| MyLine Eco baby play mat-A... | 2.0250237927024837e-10 |\n",
+      "|    Fisher-Price Royal Potty   | 3.935257304110749e-10  |\n",
       "| Evenflo Take Me Too Premie... | 4.829851675100116e-10  |\n",
-      "| Prince Lionheart Warmies W... | 5.701410463828987e-10  |\n",
-      "| Evenflo Comfort Select Per... | 6.202981719958366e-10  |\n",
-      "| Angelcare Baby Sound Monit... | 7.215289744607496e-10  |\n",
+      "| Prince Lionheart Warmies W... | 5.701410463829494e-10  |\n",
+      "| Evenflo Comfort Select Per... | 6.202981719958631e-10  |\n",
+      "| Angelcare Baby Sound Monit... | 7.215289744607804e-10  |\n",
       "| Safety 1st Exchangeable Ti... | 7.697537613113095e-10  |\n",
-      "| Levana BABYVIEW20 Interfer... | 1.169903308360331e-09  |\n",
-      "| Today's Baby&reg; Sarasota... | 1.173802223009203e-09  |\n",
-      "| Peg-Perego Tatamia High Ch... | 1.3214319184600163e-09 |\n",
+      "| Levana BABYVIEW20 Interfer... | 1.1699033083604723e-09 |\n",
+      "| Today's Baby&reg; Sarasota... | 1.173802223009278e-09  |\n",
+      "| Peg-Perego Tatamia High Ch... | 1.3214319184599834e-09 |\n",
       "+-------------------------------+------------------------+\n",
       "[27 rows x 2 columns]\n",
       "\n"
@@ -1542,69 +1540,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Class                          : LogisticClassifier\n",
-       "\n",
-       "Schema\n",
-       "------\n",
-       "Number of coefficients         : 21\n",
-       "Number of examples             : 133416\n",
-       "Number of classes              : 2\n",
-       "Number of feature columns      : 1\n",
-       "Number of unpacked features    : 20\n",
-       "\n",
-       "Hyperparameters\n",
-       "---------------\n",
-       "L1 penalty                     : 0.0\n",
-       "L2 penalty                     : 0.01\n",
-       "\n",
-       "Training Summary\n",
-       "----------------\n",
-       "Solver                         : newton\n",
-       "Solver iterations              : 6\n",
-       "Solver status                  : SUCCESS: Optimal solution found.\n",
-       "Training time (sec)            : 0.2507\n",
-       "\n",
-       "Settings\n",
-       "--------\n",
-       "Log-likelihood                 : 44323.7254\n",
-       "\n",
-       "Highest Positive Coefficients\n",
-       "-----------------------------\n",
-       "word_count_subset[loves]       : 1.6773\n",
-       "word_count_subset[perfect]     : 1.5145\n",
-       "word_count_subset[love]        : 1.3654\n",
-       "(intercept)                    : 1.2995\n",
-       "word_count_subset[easy]        : 1.1937\n",
-       "\n",
-       "Lowest Negative Coefficients\n",
-       "----------------------------\n",
-       "word_count_subset[disappointed] : -2.3551\n",
-       "word_count_subset[return]      : -2.1173\n",
-       "word_count_subset[waste]       : -2.0428\n",
-       "word_count_subset[broke]       : -1.658\n",
-       "word_count_subset[money]       : -0.8979"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class                          : LogisticClassifier\n",
+      "\n",
+      "Schema\n",
+      "------\n",
+      "Number of coefficients         : 21\n",
+      "Number of examples             : 133416\n",
+      "Number of classes              : 2\n",
+      "Number of feature columns      : 1\n",
+      "Number of unpacked features    : 20\n",
+      "\n",
+      "Hyperparameters\n",
+      "---------------\n",
+      "L1 penalty                     : 0.0\n",
+      "L2 penalty                     : 0.01\n",
+      "\n",
+      "Training Summary\n",
+      "----------------\n",
+      "Solver                         : newton\n",
+      "Solver iterations              : 6\n",
+      "Solver status                  : SUCCESS: Optimal solution found.\n",
+      "Training time (sec)            : 0.2295\n",
+      "\n",
+      "Settings\n",
+      "--------\n",
+      "Log-likelihood                 : 44323.7254\n",
+      "\n",
+      "Highest Positive Coefficients\n",
+      "-----------------------------\n",
+      "word_count_subset[loves]       : 1.6773\n",
+      "word_count_subset[perfect]     : 1.5145\n",
+      "word_count_subset[love]        : 1.3654\n",
+      "(intercept)                    : 1.2995\n",
+      "word_count_subset[easy]        : 1.1937\n",
+      "\n",
+      "Lowest Negative Coefficients\n",
+      "----------------------------\n",
+      "word_count_subset[disappointed] : -2.3551\n",
+      "word_count_subset[return]      : -2.1173\n",
+      "word_count_subset[waste]       : -2.0428\n",
+      "word_count_subset[broke]       : -1.658\n",
+      "word_count_subset[money]       : -0.8979\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "s_model = turicreate.logistic_classifier.create(train_data,\n",
     "                                                target = 'sentiment',\n",
     "                                                features=['word_count_subset'],\n",
-    "                                                validation_set=None,\n",
-    "                                               verbose=False)\n",
-    "s_model"
+    "                                                validation_set=None, \n",
+    "                                                verbose=False)\n",
+    "s_model.summary()"
    ]
   },
   {
