--- a/C03/w05/C03w05_nb_pa2.ipynb
+++ b/C03/w05/C03w05_nb_pa2.ipynb
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
        "(2.0, 1)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let us compare the classification error of the model `small_data_decision_tree_subset_20` on the entire test set `train_data`:"
+    "Now, let us compare the classification error of the model `small_data_decision_tree_subset_20` on the entire `train_data` set:"
    ]
   },
   {
@@ -1234,7 +1234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementing your own Adaboost (on decision stumps)"
+    "# Implementing our own Adaboost (on decision stumps)"
    ]
   },
   {
@@ -1318,7 +1318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Checking your Adaboost code\n",
+    "### Checking our Adaboost code\n",
     "\n",
     "Train an ensemble of **two** tree stumps and see which features those stumps split on. We will run the algorithm with the following parameters:\n",
     "* `train_data`\n",
@@ -1485,7 +1485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If your Adaboost is correctly implemented, the following things should be true:\n",
+    "If our Adaboost is correctly implemented, the following things should be true:\n",
     "\n",
     "* `tree_stumps[0]` should split on **term. 36 months** with the prediction -1 on the left and +1 on the right.\n",
     "* `tree_stumps[1]` should split on **grade.A** with the prediction -1 on the left and +1 on the right.\n",
@@ -1671,59 +1671,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_error(data, label, target=target, n=31):\n",
     "  err_all = []\n",
-    "  for n in range(1, n):\n",
-    "    preds = predict_adaboost(stump_weights[:n], tree_stumps[:n], data)\n",
+    "  for ix in range(1, n):\n",
+    "    preds = predict_adaboost(stump_weights[:ix], tree_stumps[:ix], data)\n",
     "    err = 1.0 - turicreate.evaluation.accuracy(data[target], preds)\n",
     "    err_all.append(err)\n",
-    "    print(f\"Iteration {n:2d}, {label} error = {err_all[n-1]: 2.5f}\")\n",
+    "    print(f\"Iteration {n:2d}, {label} error = {err_all[ix-1]: 2.5f}\")\n",
     "  return err_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration  1, training error =  0.42164\n",
-      "Iteration  2, training error =  0.43343\n",
-      "Iteration  3, training error =  0.40004\n",
-      "Iteration  4, training error =  0.40004\n",
-      "Iteration  5, training error =  0.38472\n",
-      "Iteration  6, training error =  0.38462\n",
-      "Iteration  7, training error =  0.38276\n",
-      "Iteration  8, training error =  0.38462\n",
-      "Iteration  9, training error =  0.38276\n",
-      "Iteration 10, training error =  0.38448\n",
-      "Iteration 11, training error =  0.38274\n",
-      "Iteration 12, training error =  0.38145\n",
-      "Iteration 13, training error =  0.38153\n",
-      "Iteration 14, training error =  0.38056\n",
-      "Iteration 15, training error =  0.38051\n",
-      "Iteration 16, training error =  0.37822\n",
-      "Iteration 17, training error =  0.37828\n",
-      "Iteration 18, training error =  0.37841\n",
-      "Iteration 19, training error =  0.37806\n",
-      "Iteration 20, training error =  0.37876\n",
-      "Iteration 21, training error =  0.37957\n",
-      "Iteration 22, training error =  0.37890\n",
-      "Iteration 23, training error =  0.37890\n",
-      "Iteration 24, training error =  0.37876\n",
-      "Iteration 25, training error =  0.37890\n",
-      "Iteration 26, training error =  0.37898\n",
-      "Iteration 27, training error =  0.37911\n",
-      "Iteration 28, training error =  0.37892\n",
-      "Iteration 29, training error =  0.37903\n",
-      "Iteration 30, training error =  0.37873\n"
+      "Iteration 31, training error =  0.42164\n",
+      "Iteration 31, training error =  0.43343\n",
+      "Iteration 31, training error =  0.40004\n",
+      "Iteration 31, training error =  0.40004\n",
+      "Iteration 31, training error =  0.38472\n",
+      "Iteration 31, training error =  0.38462\n",
+      "Iteration 31, training error =  0.38276\n",
+      "Iteration 31, training error =  0.38462\n",
+      "Iteration 31, training error =  0.38276\n",
+      "Iteration 31, training error =  0.38448\n",
+      "Iteration 31, training error =  0.38274\n",
+      "Iteration 31, training error =  0.38145\n",
+      "Iteration 31, training error =  0.38153\n",
+      "Iteration 31, training error =  0.38056\n",
+      "Iteration 31, training error =  0.38051\n",
+      "Iteration 31, training error =  0.37822\n",
+      "Iteration 31, training error =  0.37828\n",
+      "Iteration 31, training error =  0.37841\n",
+      "Iteration 31, training error =  0.37806\n",
+      "Iteration 31, training error =  0.37876\n",
+      "Iteration 31, training error =  0.37957\n",
+      "Iteration 31, training error =  0.37890\n",
+      "Iteration 31, training error =  0.37890\n",
+      "Iteration 31, training error =  0.37876\n",
+      "Iteration 31, training error =  0.37890\n",
+      "Iteration 31, training error =  0.37898\n",
+      "Iteration 31, training error =  0.37911\n",
+      "Iteration 31, training error =  0.37892\n",
+      "Iteration 31, training error =  0.37903\n",
+      "Iteration 31, training error =  0.37873\n"
      ]
     }
    ],
@@ -1742,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1789,43 +1789,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration  1, test error =  0.42331\n",
-      "Iteration  2, test error =  0.42848\n",
-      "Iteration  3, test error =  0.39810\n",
-      "Iteration  4, test error =  0.39810\n",
-      "Iteration  5, test error =  0.37990\n",
-      "Iteration  6, test error =  0.38001\n",
-      "Iteration  7, test error =  0.37925\n",
-      "Iteration  8, test error =  0.38001\n",
-      "Iteration  9, test error =  0.37925\n",
-      "Iteration 10, test error =  0.37969\n",
-      "Iteration 11, test error =  0.37925\n",
-      "Iteration 12, test error =  0.37796\n",
-      "Iteration 13, test error =  0.37925\n",
-      "Iteration 14, test error =  0.37785\n",
-      "Iteration 15, test error =  0.37850\n",
-      "Iteration 16, test error =  0.37785\n",
-      "Iteration 17, test error =  0.37796\n",
-      "Iteration 18, test error =  0.37785\n",
-      "Iteration 19, test error =  0.37818\n",
-      "Iteration 20, test error =  0.37688\n",
-      "Iteration 21, test error =  0.37753\n",
-      "Iteration 22, test error =  0.37678\n",
-      "Iteration 23, test error =  0.37678\n",
-      "Iteration 24, test error =  0.37688\n",
-      "Iteration 25, test error =  0.37678\n",
-      "Iteration 26, test error =  0.37656\n",
-      "Iteration 27, test error =  0.37645\n",
-      "Iteration 28, test error =  0.37699\n",
-      "Iteration 29, test error =  0.37678\n",
-      "Iteration 30, test error =  0.37678\n"
+      "Iteration 31, test error =  0.42331\n",
+      "Iteration 31, test error =  0.42848\n",
+      "Iteration 31, test error =  0.39810\n",
+      "Iteration 31, test error =  0.39810\n",
+      "Iteration 31, test error =  0.37990\n",
+      "Iteration 31, test error =  0.38001\n",
+      "Iteration 31, test error =  0.37925\n",
+      "Iteration 31, test error =  0.38001\n",
+      "Iteration 31, test error =  0.37925\n",
+      "Iteration 31, test error =  0.37969\n",
+      "Iteration 31, test error =  0.37925\n",
+      "Iteration 31, test error =  0.37796\n",
+      "Iteration 31, test error =  0.37925\n",
+      "Iteration 31, test error =  0.37785\n",
+      "Iteration 31, test error =  0.37850\n",
+      "Iteration 31, test error =  0.37785\n",
+      "Iteration 31, test error =  0.37796\n",
+      "Iteration 31, test error =  0.37785\n",
+      "Iteration 31, test error =  0.37818\n",
+      "Iteration 31, test error =  0.37688\n",
+      "Iteration 31, test error =  0.37753\n",
+      "Iteration 31, test error =  0.37678\n",
+      "Iteration 31, test error =  0.37678\n",
+      "Iteration 31, test error =  0.37688\n",
+      "Iteration 31, test error =  0.37678\n",
+      "Iteration 31, test error =  0.37656\n",
+      "Iteration 31, test error =  0.37645\n",
+      "Iteration 31, test error =  0.37699\n",
+      "Iteration 31, test error =  0.37678\n",
+      "Iteration 31, test error =  0.37678\n"
      ]
     }
    ],
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
